Ticket: #FT-834 SubTicket: # Component:Implementation front-end part Changes: 1. Create PasswordChangeModalViewModel.js. 2. Create PasswordChangeViewModel.js. 3. Create PasswordChangeControl.html. 4. Change positive button with to auto to avoid button text too long issue. 5. Add new navigation item change password in Settings. 6. Add event to open change password popup.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/BootstrapModal.less
@@ -101,7 +101,8 @@ button * {
 	color: #ffffff;
 	padding: 0px;
 	height: 26px;
-	width: 108px;
+	width: auto;
+	min-width: 100px;
 	background-color: #333333;
 	border-color: #444444;
 }
